@@ -40,6 +40,7 @@ VERSION 1.0.5
 	- refactorised the filter to be an external class, so that one day it can be
 	  extensible
 	- added CVSFilter
+	- added ProjectFileSet to specity a set of files to search in
 
 VERSION 1.0.4
   [stefan kost]
